--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sardonyx</title>
-</head>
+<link rel="shortcut icon" href="Icon.svg"></head>
 <body>
   <div id="root"></div>
-</body>
+<script type="text/javascript" src="index.js"></script></body>
 </html>
