--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../article.css">
   <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css">
   <title>Sardonyx - Privacy</title>
 </head>
@@ -13,7 +13,7 @@
     <img class="logo" src="../Icon.svg">
     <div>
       <h1>Sardonyx Privacy Policy</h1>
-    <p>Last updated: March 9 2019</p>
+      <p>Last updated: March 10 2019</p>
     </div>
   </div>
 
@@ -50,7 +50,7 @@
     </div>
     
     <div>
-      <h2>What information Sardonyx does not collect</h2>
+      <h2>Information Sardonyx does not collect</h2>
       <p>We do not collect information from children under 13.</p>
       <p>We do not collect Managebac passwords.</p>
     </div>
