--- a/public/login/index.html
+++ b/public/login/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>Please turn on JavaScript on your browser to use the app.</noscript>
   <script type="text/javascript" src="../scripts/login.js"></script></body>
 </html>
