--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="title">
-    <img class="logo" src="../Icon.svg">
+    <img class="logo" src="../assets/Icon.svg">
     <div>
       <h1>Sardonyx Terms of Service</h1>
       <p>Last updated: March 10 2019</p>
