Create download page

--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -21,7 +21,7 @@
 
     <div>
       <p>Thank you for choosing to be part of our community at SardonyxApp ("<strong>we</strong>", "<strong>us</strong>", "<strong>our</strong>"). We are committed to protecting your personal information and your right to privacy.</p>
-      <p>When you visit our website, mobile application, and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy notice, we describe our privacy policy. We seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy policy that you do not agree with, please discontinue use of ourSites or Apps and our services.</p>
+      <p>When you visit our website, mobile application, and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy notice, we describe our privacy policy. We seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy policy that you do not agree with, please discontinue use of our Sites or Apps and our services.</p>
       <p>This privacy policy applies to all information collected through our website (such as <a href="https://sardonyx.app">https://sardonyx.app</a>), mobile application, ("<strong>Apps</strong>"), and/or any related services, (we refer to them collectively in this privacy policy as the "<strong>Sites</strong>").</p>
       <p><strong>Please read this privacy policy carefully as it will help you make informed decisions about sharing your personal information with us.</strong></p>
     </div>
@@ -78,7 +78,8 @@
     
     <div>
       <h2>Cookies and other tracking technologies</h2>
-      <p><strong>In short:</strong> We may use cookies and other tracking technologies to collect and store your information. We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Policy.</p>
+      <p><strong>In short:</strong> We may use cookies and other tracking technologies to collect and store your information.</p>
+      <p>We may use cookies and similar tracking technologies to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Policy.</p>
     </div>
     
     <div>
