Finish about page

--- a/public/download/index.html
+++ b/public/download/index.html
@@ -27,11 +27,11 @@
     </ul>
   </div>
   <div id="content">
-    <div class="block">
+    <div class="component">
       <h2>Mobile App</h2>
       <p>The Sardonyx mobile application is currently under development. This will be released soon.</p>
     </div>
-    <div class="block">
+    <div class="component">
       <h2>Source Code</h2>
       <p>The source code for Sardonyx is available on GitHub. Although Sardonyx cannot guarantee stability and functionality, the applications can be built from the source code as well.</p>
       <ul>
@@ -46,12 +46,12 @@
       <p id="copyright">&#169; 2018-2019 SardonyxApp</p>
     </div>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/download">Download</a></li>
-      <li><a href="/changelog">Changelog</a></li>
-      <li><a href="/terms">Terms</a></li>
-      <li><a href="/privacy">Privacy</a></li>
+      <li><a href="../">Home</a></li>
+      <li><a href="../about">About</a></li>
+      <li><a href="/">Download</a></li>
+      <li><a href="../changelog">Changelog</a></li>
+      <li><a href="../terms">Terms</a></li>
+      <li><a href="../privacy">Privacy</a></li>
     </ul>
   </div>
 </body>
