Make a separate polyfilled app for IE

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -11,7 +11,7 @@
   <noscript>Please turn on JavaScript on your browser to use the app.</noscript>
   <script>
     if (navigator.userAgent.indexOf("MSIE ") > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./)) {
-      alert('The Internet Explorer browser does not work well with Sardonyx. For the best experience, we recommend you to download Google Chrome or Mozilla Firefox.');
+      window.location.replace('ie.html');
     }
   </script>
 <script type="text/javascript" src="../scripts/app.js"></script></body>
