--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,19 @@
   <link href="https://indestructibletype.com/fonts/Jost.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
   <title>Sardonyx</title>
+  <script>
+    var linkTo = function(target) {
+      window.location.href = target;
+    };
+  </script>
 </head>
 <body>
   <div id="title" class="orange">
     <img class="logo" src="assets/Icon_inverted.svg">
     <div>
       <h1>Sardonyx</h1>
-      <button class="download-link action" style="margin-right: 4px">Download (coming soon)</button>
-      <button class="app-link action">Launch app <span class="arrow">→</span></button>
+      <button class="download-link action" style="margin-right: 4px" onclick="linkTo('/download')">Download (coming soon)</button>
+      <button class="app-link action" onclick="linkTo('/app')">Launch app <span class="arrow">→</span></button>
     </div>
   </div>
   <div id="nav" class="nav orange">
@@ -85,9 +90,9 @@
   <div id="ready" class="block orange center">
     <h1>Ready to start?</h1>
     <p>If you are using a computer or a tablet, our web application is accessible through a web browser.</p>
-    <button class="app-link action">Launch app <span class="arrow">→</span></button>
+    <button class="app-link action" onclick="linkTo('/app')">Launch app <span class="arrow">→</span></button>
     <p>If you are using a mobile phone, Sardonyx is currently developing a mobile application for both iOS and Android.</p>
-    <button class="download-link action" style="margin-right: 4px">Download (coming soon)</button>
+    <button class="download-link action" style="margin-right: 4px" onclick="linkTo('/download')">Download (coming soon)</button>
   </div>
 
   <div id="footer" class="nav columns">
@@ -103,19 +108,5 @@
       <li><a href="/privacy">Privacy</a></li>
     </ul>
   </div>
-
-  <script>
-    document.querySelectorAll('.app-link').forEach(function(b) {
-      b.addEventListener('click', function(e) {
-        window.location.href = '/app';
-      });
-    });
-    
-    document.querySelectorAll('.download-link').forEach(function(b) {
-      b.addEventListener('click', function(e) {
-        window.location.href = '/download';
-      });
-    });
-  </script>
 </body>
 </html>
