Tweak public pages

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <div class="block columns">
       <div class="explanation">
         <h2>Group tasklist specialized for students and teachers</h2>
-        <p>Sardonyx is specifically target towards students and teachers, in order to assist workload management in school.</p>
+        <p>Sardonyx is specifically targeted towards students and teachers, in order to assist workload management in school.</p>
         <p>Sorted by dates, the workload is transparent for all users.</p>
       </div>
       <div class="graphic">
@@ -66,15 +66,15 @@
         <img src="assets/screenshot-date.png">
       </div>
       <div class="explanation">
-        <h2>Collaborate effectively</h2>
+        <h2>Collaborate effectively, efficiently, and effortlessly</h2>
         <p>Sardonyx allows students and teachers to build a collaborative environment by allowing everyone to create, edit, and delete tasks as needed.</p>
         <p>An intuitive user interface (UI) has been integrated to facilitate collaboration.</p>
       </div>
     </div>
     <div class="block columns">
       <div class="explanation">
-        <h2>Non-English language support</h2>
-        <p>Sardonyx tasks support input in almost any language, in order to meet the needs of an international community.</p>
+        <h2>Communicate on a international scale</h2>
+        <p>Sardonyx tasks support content in almost any language, in order to meet the needs of a multilingual community.</p>
       </div>
       <div class="graphic">
         <img src="assets/screenshot-lang.png">
