--- a/public/about/index.html
+++ b/public/about/index.html
@@ -19,7 +19,7 @@
       <div id="nav" class="nav orange">
         <ul>
           <li><a href="../">Home</a></li>
-          <li><a href="/">About</a></li>
+          <li><a href="./">About</a></li>
           <li><a href="../download">Download</a></li>
           <li><a href="../changelog">Changelog</a></li>
           <li><a href="../terms">Terms</a></li>
@@ -60,7 +60,7 @@
     </div>
     <ul>
       <li><a href="../">Home</a></li>
-      <li><a href="/">About</a></li>
+      <li><a href="./">About</a></li>
       <li><a href="../download">Download</a></li>
       <li><a href="../changelog">Changelog</a></li>
       <li><a href="../terms">Terms</a></li>
