--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -20,12 +20,27 @@
   <div id="content">
     <div>
       <h2>Latest version</h2>
+      <h3 class="version">v1.0.1-beta.1</h3>
+      <p>Released April 19 2019</p>
+      <h3>Features</h3>
+      <ul>
+        <li>Enabled real time updates of tasklist contents</li>
+      </ul>
+
+      <h3>Miscellaneous</h3>
+      <ul>
+        <li>Updated homepage content</li>
+        <li>Updated TaskFilter UX</li>
+      </ul>
+
+      <h2>Legacy versions</h2>
       <h3 class="version">v1.0.0-beta.1</h3>
       <p>Released April 7 2019</p>
       <h3>Features</h3>
       <ul>
         <li>Enabled the Managebac API to retrieve the user's name and avatar URL on default load. (Endpoints: GET /api/validate, POST /api/login, GET /api/dashboard)</li>
       </ul>
+      
       <h3>Bugs</h3>
       <ul>
         <li>Addressed an issue where the sign in button was not displayed correctly for WebKit browsers on mobile and table devices.</li>
@@ -38,10 +53,9 @@
       </ul>
       <h3>Miscellaneous</h3>
       <ul>
-        <li>Add basic unit tests for loading tasklist related information.</li>
+        <li>Added basic unit tests for loading tasklist related information.</li>
       </ul>
 
-      <h2>Legacy versions</h2>
       <h3 class="version">v1.0.0-alpha.2</h3>
       <p>Released April 6 2019</p>
       <h3>Experimental features</h3>
@@ -62,7 +76,6 @@
         <li>Created the Home, About, and Download pages.</li>
       </ul>
 
-      <h2>Legacy versions</h2>
       <h3 class="version">v1.0.0-alpha.1</h3>
       <p>Released March 29 2019</p>
       <ul>
