Fix typo in main page

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <div class="block columns">
       <div class="explanation">
         <h2>Group tasklist specialized for students and teachers</h2>
-        <p>Sardonyx is specifically targeted towards students and teachers, in order to assist workload management in school.</p>
+        <p>Sardonyx is specifically targeted towards students and teachers in order to assist workload management in school.</p>
         <p>Sorted by dates, the workload is transparent for all users.</p>
       </div>
       <div class="graphic">
@@ -73,7 +73,7 @@
     </div>
     <div class="block columns">
       <div class="explanation">
-        <h2>Communicate on a international scale</h2>
+        <h2>Communicate on an international scale</h2>
         <p>Sardonyx tasks support content in almost any language, in order to meet the needs of a multilingual community.</p>
       </div>
       <div class="graphic">
