--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -24,18 +24,18 @@
       <p>Released April 19 2019</p>
       <h3>Features</h3>
       <ul>
-        <li>Enabled real time updates of tasklist contents</li>
+        <li>Enabled real time updates of tasklist contents.</li>
       </ul>
 
       <h3>Security</h3>
       <ul>
-        <li>Patch vulnerabilities caused by developer dependencies. (<a href="https://nodesecurity.io/advisories/755">#755</a>, <a href="https://nodesecurity.io/advisories/803">#803</a>, <a href="https://nodesecurity.io/advisories/813">#813</a>)</li>
+        <li>Patched vulnerabilities caused by developer dependencies. (<a href="https://nodesecurity.io/advisories/755">#755</a>, <a href="https://nodesecurity.io/advisories/803">#803</a>, <a href="https://nodesecurity.io/advisories/813">#813</a>)</li>
       </ul>
 
       <h3>Miscellaneous</h3>
       <ul>
-        <li>Updated homepage content</li>
-        <li>Updated TaskFilter UX</li>
+        <li>Updated homepage content.</li>
+        <li>Updated TaskFilter UX.</li>
       </ul>
 
       <h2>Legacy versions</h2>
