Refactor code for labels

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -20,32 +20,36 @@
   <div id="content">
     <div>
       <h2>Latest version</h2>
+      <h3 class="version">v1.0.2-beta.1</h3>
+      <p>Released April 2019</p>
+      <h3>Features</h3>
+      <ul>
+        <li>Enabled automatic syncing with Managebac.</li>
+      </ul>
+
+      <h2>Legacy versions</h2>
       <h3 class="version">v1.0.1-beta.1</h3>
       <p>Released April 19 2019</p>
       <h3>Features</h3>
       <ul>
         <li>Enabled real time updates of tasklist contents.</li>
       </ul>
-
       <h3>Security</h3>
       <ul>
         <li>Patched vulnerabilities caused by developer dependencies. (<a href="https://nodesecurity.io/advisories/755">#755</a>, <a href="https://nodesecurity.io/advisories/803">#803</a>, <a href="https://nodesecurity.io/advisories/813">#813</a>)</li>
       </ul>
-
       <h3>Miscellaneous</h3>
       <ul>
         <li>Updated homepage content.</li>
         <li>Updated TaskFilter UX.</li>
       </ul>
 
-      <h2>Legacy versions</h2>
       <h3 class="version">v1.0.0-beta.1</h3>
       <p>Released April 7 2019</p>
       <h3>Features</h3>
       <ul>
         <li>Enabled the Managebac API to retrieve the user's name and avatar URL on default load. (Endpoints: GET /api/validate, POST /api/login, GET /api/dashboard)</li>
       </ul>
-      
       <h3>Bugs</h3>
       <ul>
         <li>Addressed an issue where the sign in button was not displayed correctly for WebKit browsers on mobile and table devices.</li>
