Update supporting documents

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -52,6 +52,11 @@
       </ul>
       <p>Above information is as of April 2019.</p>
     </div>
+    <div class="component">
+      <h2>Managebac compatibility</h2>
+      <p>Sardonyx and Managebac connect to create a seamless experience for students. Students can log in to Sardonyx using their Managebac credentials, eliminating the need to create separate accounts. The Managebac integration allows Sardonyx to sync tasklists with Managebac's calendar. For our use of Managebac data, please refer to the <a href="/privacy">Privacy Policy</a>.</p>
+      <p>Disclaimer: Sardonyx is not affiliated, associated, authorized, endorsed by, or in any way officially connected with ManageBac, or any of its subsidiaries or its affiliates.</p>
+    </div>
   </div>
   
   <div id="footer" class="nav columns">
