--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -13,7 +13,7 @@
     <img class="logo" src="../assets/Icon.svg">
     <div>
       <h1>Sardonyx Privacy Policy</h1>
-      <p>Last updated: March 10 2019</p>
+      <p>Last updated: April 21 2019</p>
     </div>
   </div>
 
@@ -105,7 +105,8 @@
     
     <div>
       <h2>Updates to this policy</h2>  
-      <p><strong>In short:</strong> We will update this policy as necessary to stay compliant with relevant laws. We may update this privacy policy from time to time. The updated version will be indicated by an updated “Revised” date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy policy, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy policy frequently to be informed of how we are protecting your information.</p>
+      <p><strong>In short:</strong> We will update this policy as necessary to stay compliant with relevant laws.</p>
+      <p>We may update this privacy policy from time to time. The updated version will be indicated by an updated “Revised” date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy policy, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy policy frequently to be informed of how we are protecting your information.</p>
     </div>
 
     <div>  
