--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -21,7 +21,7 @@
     <div>
       <h2>Latest version</h2>
       <h3 class="version">v1.0.2-beta.1</h3>
-      <p>Released April 2019</p>
+      <p>Released April 22 2019</p>
       <h3>Features</h3>
       <ul>
         <li>Enabled automatic syncing with Managebac.</li>
