Correct modal positions

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -21,14 +21,18 @@
     <div>
       <h2>Latest version</h2>
       <h3 class="version">v1.0.2-beta.1</h3>
-      <p>Released April 22 2019</p>
+      <p>Released April 23 2019</p>
       <h3>Features</h3>
       <ul>
         <li>Enabled automatic syncing with Managebac.</li>
       </ul>
+      <h3>Bugs</h3>
+      <ul>
+        <li>Addressed an issue where UI panels were not positioned properly.</li>
+      </ul>
 
       <h2>Legacy versions</h2>
-      <h3 class="version">v1.0.1-beta.1</h3>
+      <h3 class="version">v1.0.2-beta.1</h3>
       <p>Released April 19 2019</p>
       <h3>Features</h3>
       <ul>
