Automatically remove / at end of provided URL

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -25,6 +25,7 @@
       <h3>Features</h3>
       <ul>
         <li>Enabled automatic syncing with Managebac.</li>
+        <li>Enabled users to edit label colors.</li>
       </ul>
       <h3>Bugs</h3>
       <ul>
