Fix header and footer links

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </div>
   <div id="nav" class="nav orange">
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="/?redirect=false">Home</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/download">Download</a></li>
       <li><a href="/changelog">Changelog</a></li>
@@ -100,7 +100,7 @@
       <p id="copyright">&#169; 2018-2019 SardonyxApp</p>
     </div>
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="/?redirect=false">Home</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/download">Download</a></li>
       <li><a href="/changelog">Changelog</a></li>
