--- a/public/download/index.html
+++ b/public/download/index.html
@@ -18,7 +18,7 @@
   </div>
   <div id="nav" class="nav orange">
     <ul>
-      <li><a href="../">Home</a></li>
+      <li><a href="../?redirect=false">Home</a></li>
       <li><a href="../about">About</a></li>
       <li><a href="./">Download</a></li>
       <li><a href="../changelog">Changelog</a></li>
@@ -46,7 +46,7 @@
       <p id="copyright">&#169; 2018-2019 SardonyxApp</p>
     </div>
     <ul>
-      <li><a href="../">Home</a></li>
+      <li><a href="../?redirect=false">Home</a></li>
       <li><a href="../about">About</a></li>
       <li><a href="/">Download</a></li>
       <li><a href="../changelog">Changelog</a></li>
