--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -22,6 +22,29 @@
       <h2>Latest version</h2>
 
       <div>
+        <h3 class="version">v1.1.0</div>
+        <p>Released June 22 2019</p>
+        <h3>Breaking changes</h3>
+        <ul>
+          <li>The API now returns managebac data as JSON in the body, not the Managebac-Data header.</li>
+        </ul>
+        <h3>Features</h3>
+        <ul>
+          <li>The app now loads present and past tasks separately.</li>
+          <li>The API is now able to returns a specific response to notify Managebac maintenance.</li>
+        </ul>
+        <h3>Bugs</h3>
+        <ul>
+          <li>Addressed an issue where users were not able to set default category labels.</li>
+          <li>Addressed an issue where the scraper did not load CAS titles correctly under some circumstances.</li>
+          <li>Addressed an issue where cards in the tasklist were spaced unevenly for small screens.</li>
+          <li>Addressed an issue where labels were sometimes too large for small screens.</li>
+        </ul>
+      </div>
+
+      <h2>Legacy versions</h2>
+
+      <div>
         <h3 class="version">v1.0.3-beta.1</h3>
         <p>Released June 7 2019</p>
         <h3>Features</h3>
@@ -46,8 +69,6 @@
           <li>Set up a redirect from root to app when the user carries a valid cookie.</li>
         </ul>
       </div>
-
-      <h2>Legacy versions</h2>
 
       <div>
         <h3 class="version">v1.0.2-beta.1</h3>
