--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <img class="logo" src="assets/Icon_inverted.svg">
     <div>
       <h1>Sardonyx</h1>
-      <button class="download-link action" style="margin-right: 4px" onclick="linkTo('/download')">Download (coming soon)</button>
+      <button class="download-link action" style="margin-right: 4px" onclick="linkTo('/download')">Download</button>
       <button class="app-link action" onclick="linkTo('/app')">Launch app <span class="arrow">→</span></button>
     </div>
   </div>
@@ -92,7 +92,7 @@
     <p>If you are using a computer or a tablet, our web application is accessible through a web browser.</p>
     <button class="app-link action" onclick="linkTo('/app')">Launch app <span class="arrow">→</span></button>
     <p>If you are using a mobile phone, Sardonyx is currently developing a mobile application for both iOS and Android.</p>
-    <button class="download-link action" style="margin-right: 4px" onclick="linkTo('/download')">Download (coming soon)</button>
+    <button class="download-link action" style="margin-right: 4px" onclick="linkTo('/download')">Download</button>
   </div>
 
   <div id="footer" class="nav columns">
