Add App Store link

--- a/public/download/index.html
+++ b/public/download/index.html
@@ -39,7 +39,8 @@
     </div>
     <div class="component">
       <h2>Mobile App (iOS)</h2>
-      <p>Coming soon</p>
+      <p>Please download the app from the App Store.</p>
+      <button class="download-link action-colored" style="margin-top: 8px" onclick="linkTo('https:\/\/apps.apple.com/us/app/sardonyx-task-manager/id1471670826')">Download</button>
     </div>
     <div class="component">
       <h2>Source Code</h2>
