Update versioning to v1.1.1

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -22,6 +22,34 @@
       <h2>Latest version</h2>
 
       <div>
+        <h3 class="version">v1.1.1</h3>
+        <p>Released July 8 2019</p>
+        <h3>Features</h3>
+        <ul>
+          <li>Labels are now sorted by alphabet instead of time of creation.</li>
+        </ul>
+        <h3>Bugs</h3>
+        <ul>
+          <li>Addressed an issue where tasks without dates were not loaded initially.</li>
+          <li>Addressed an issue where the default tasklist for teachers was not shown correctly in the dropdown menu on the information panel.</li>
+          <li>Addressed an issue where inccorrect responses were returned for CAS experiences.</li>
+          <li>Addressed an issue where many API responses were decoded incorrectly.</li>
+          <li>Addressed other minor issues.</li>
+        </ul>
+        <h3>Security</h3>
+        <ul>
+          <li>Teacher passwords are now stored in a more secure format (bcrypt hashes)</li>
+          <li>Old password is required for teachers to change passwords.</li>
+        </ul>
+        <h3>Miscellaneous</h3>
+        <ul>
+          <li>Added download links for Android and iOS</li>
+        </ul>
+      </div>
+
+      <h2>Legacy versions</h2>
+
+      <div>
         <h3 class="version">v1.1.0</div>
         <p>Released June 22 2019</p>
         <h3>Breaking changes</h3>
@@ -41,8 +69,6 @@
           <li>Addressed an issue where labels were sometimes too large for small screens.</li>
         </ul>
       </div>
-
-      <h2>Legacy versions</h2>
 
       <div>
         <h3 class="version">v1.0.3-beta.1</h3>
