Publish an update

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -22,6 +22,30 @@
       <h2>Latest version</h2>
 
       <div>
+        <h3 class="version">v1.2.0</h3>
+        <p>Released September 25 2019</p>
+        <h3>Features</h3>
+        <ul>
+          <li>Labels are now sorted by alphabetical order instead of by the date of creation.</li>
+          <li>Expired logins are now redirected to the login screen.</li>
+          <li>Added clearer error messages for failed teacher logins.</li>
+          <li>Added support for foundation year Managebac features.</li>
+        </ul>
+        <h3>Bugs</h3>
+        <ul>
+          <li>Addressed an issue where the "Only Visible For Teachers" was misplaced in the API.</li>
+          <li>Addressed an issue where right clicking on a link caused navigation.</li>
+          <li>Addressed other minor issues.</li>
+        </ul>
+        <h3>Miscellaneous</h3>
+        <ul>
+          <li>Migrated from Node.js 8 to Node.js 10</li>
+        </ul>
+      </div>
+
+      <h2>Legacy versions</h2>
+
+      <div>
         <h3 class="version">v1.1.1</h3>
         <p>Released July 8 2019</p>
         <h3>Features</h3>
@@ -46,8 +70,6 @@
           <li>Added download links for Android and iOS</li>
         </ul>
       </div>
-
-      <h2>Legacy versions</h2>
 
       <div>
         <h3 class="version">v1.1.0</div>
